--- a/ebooks/history_yy/yuanshiyanyi/000.htm
+++ b/ebooks/history_yy/yuanshiyanyi/000.htm
@@ -32,7 +32,7 @@
 采，多半演入，茶余酒后，取而阅之，非特足供消遣，抑亦藉广见闻，海内大雅，其毋笑我
 芜杂乎？是为序。中华民国九年一月古越蔡东帆自识于海上寓庐。
 <p><hr>
-<center><A HREF="_content.html">回目录</a>　　<a href="001.htm">下一回</a></center>
+<center><A HREF="content.html">回目录</a>　　<a href="001.htm">下一回</a></center>
 
 </body>
 </html>
