--- a/ebooks/history_yy/yuanshiyanyi/001.htm
+++ b/ebooks/history_yy/yuanshiyanyi/001.htm
@@ -186,7 +186,7 @@
 描摹朵奔巴延，暨孛端察儿处，尤觉得一片天真，口吻俱肖。庸庸者多厚福，意者其或然
 欤！末后一结，兔起鹘落，益令人匪夷所思。
 <p><hr>
-<center><A HREF="000.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="002.htm">下一回</A></center>
+<center><A HREF="000.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="002.htm">下一回</A></center>
 
 </body>
 </html>
