--- a/ebooks/history_yy/yuanshiyanyi/002.htm
+++ b/ebooks/history_yy/yuanshiyanyi/002.htm
@@ -180,7 +180,7 @@
 耶？本回夹叙夹写，斐然成章，而命意则全为成吉思汗蓄势，如看山然，下有要穴，则上必
 有层峦叠嶂；如观水然，后有洪波，则前必有曲涧重溪。大笔淋漓，不落小家气象。
 <p><hr>
-<center><A HREF="001.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="003.htm">下一回</A></center>
+<center><A HREF="001.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="003.htm">下一回</A></center>
 
 </body>
 </html>
