--- a/ebooks/history_yy/yuanshiyanyi/003.htm
+++ b/ebooks/history_yy/yuanshiyanyi/003.htm
@@ -175,7 +175,7 @@
 亡；帖木真之情急智生，到底得离险难。人贵自立，如寻常儿女之哭泣穷途，自经沟渎而莫
 之知者，果何补耶！读此应为之一叹，复为之一奋。
 <p><hr>
-<center><A HREF="002.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="004.htm">下一回</A></center>
+<center><A HREF="002.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="004.htm">下一回</A></center>
 
 </body>
 </html>
