--- a/ebooks/history_yy/yuanshiyanyi/004.htm
+++ b/ebooks/history_yy/yuanshiyanyi/004.htm
@@ -153,7 +153,7 @@
 先，嫁女于后，不以贫富贵贱之异辙，遂异初心，是皆所谓久要不忘者，谁谓胡儿无信义
 耶？读此回，殊令人低徊不置！
 <p><hr>
-<center><A HREF="003.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="005.htm">下一回</A></center>
+<center><A HREF="003.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="005.htm">下一回</A></center>
 
 </body>
 </html>
