--- a/ebooks/history_yy/yuanshiyanyi/005.htm
+++ b/ebooks/history_yy/yuanshiyanyi/005.htm
@@ -157,7 +157,7 @@
 而后有桑沽儿河畔之兴，是妇言亦非全未可从者。要之求人不如求己，他乡何似故乡，丈夫
 子发愤其所为天下雄，安在无土不王，观此而古语益信。
 <p><hr>
-<center><A HREF="004.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="006.htm">下一回</A></center>
+<center><A HREF="004.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="006.htm">下一回</A></center>
 
 </body>
 </html>
