--- a/ebooks/history_yy/yuanshiyanyi/006.htm
+++ b/ebooks/history_yy/yuanshiyanyi/006.htm
@@ -183,7 +183,7 @@
 人；下半段叙阔弈坛之战，得半而止，独见首不见尾，此是作者蓄笔处，亦即是示奇处。名
 家小说，往往有此。否则，便无气焰，亦乌足动目耶！
 <p><hr>
-<center><A HREF="005.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="007.htm">下一回</A></center>
+<center><A HREF="005.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="007.htm">下一回</A></center>
 
 </body>
 </html>
