--- a/ebooks/history_yy/yuanshiyanyi/008.htm
+++ b/ebooks/history_yy/yuanshiyanyi/008.htm
@@ -156,7 +156,7 @@
 之役，为帖木真一生有名战事，蒙古人至今称道之。作者叙述此战，亦觉精警绝伦，文生事
 耶，事生文耶！有是事不可无是文，读罢当浮一大白！
 <p><hr>
-<center><A HREF="007.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="009.htm">下一回</A></center>
+<center><A HREF="007.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="009.htm">下一回</A></center>
 
 </body>
 </html>
