--- a/ebooks/history_yy/yuanshiyanyi/009.htm
+++ b/ebooks/history_yy/yuanshiyanyi/009.htm
@@ -177,7 +177,7 @@
 汪罕之亡，为子所误；乃蛮之亡，为妇所误。妇子之言，不可尽信也如此！然脱里未尝不负
 恩，太阳汗未尝不好战。祸福无门，人自召之，读此可以知戒，文字犹其余事耳。
 <p><hr>
-<center><A HREF="008.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="010.htm">下一回</A></center>
+<center><A HREF="008.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="010.htm">下一回</A></center>
 
 </body>
 </html>
