--- a/ebooks/history_yy/yuanshiyanyi/010.htm
+++ b/ebooks/history_yy/yuanshiyanyi/010.htm
@@ -173,7 +173,7 @@
 愿再事帖木真，较诸奴颜婢膝，犹差一间。作者抑扬尽致，褒贬得宜，而于描摹处尤觉逼
 真，是小说家，亦良史家也！
 <p><hr>
-<center><A HREF="009.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="011.htm">下一回</A></center>
+<center><A HREF="009.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="011.htm">下一回</A></center>
 
 </body>
 </html>
