--- a/ebooks/history_yy/yuanshiyanyi/011.htm
+++ b/ebooks/history_yy/yuanshiyanyi/011.htm
@@ -175,7 +175,7 @@
 献女之故，俱允和议，是其所耽耽逐逐者，尤在美妇人，天亦何苦令强暴之徒，蹧蹋若干妇
 女耶！读此回，令人疑愤交集，几欲向天阍而一问之！
 <p><hr>
-<center><A HREF="010.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="012.htm">下一回</A></center>
+<center><A HREF="010.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="012.htm">下一回</A></center>
 
 </body>
 </html>
