--- a/ebooks/history_yy/yuanshiyanyi/013.htm
+++ b/ebooks/history_yy/yuanshiyanyi/013.htm
@@ -187,7 +187,7 @@
 为难阅，则从前史乘，更不必过问矣！本书所载地理，南北东西各有分别，阅《元史》地图
 自知。看似容易恰艰辛，阅者幸勿滑过！
 <p><hr>
-<center><A HREF="012.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="014.htm">下一回</A></center>
+<center><A HREF="012.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="014.htm">下一回</A></center>
 
 </body>
 </html>
