--- a/ebooks/history_yy/yuanshiyanyi/015.htm
+++ b/ebooks/history_yy/yuanshiyanyi/015.htm
@@ -168,7 +168,7 @@
 乎？本回叙成吉思汗事，为成吉思汗衰年之结局，实括成吉思汗毕生之隐衷，彼固一世之雄
 也，而今安在哉！著书人述元代史，于成吉思汗较详，我知其固有所感矣。
 <p><hr>
-<center><A HREF="014.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="016.htm">下一回</A></center>
+<center><A HREF="014.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="016.htm">下一回</A></center>
 
 </body>
 </html>
