--- a/ebooks/history_yy/yuanshiyanyi/016.htm
+++ b/ebooks/history_yy/yuanshiyanyi/016.htm
@@ -179,7 +179,7 @@
 此；然亦何尝非人事致之耶？本回全叙亡金事迹，而金之所以致亡，已跃然纸上。徒谓其录
 述之详，犹皮相之见也。
 <p><hr>
-<center><A HREF="015.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="017.htm">下一回</A></center>
+<center><A HREF="015.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="017.htm">下一回</A></center>
 
 </body>
 </html>
