--- a/ebooks/history_yy/yuanshiyanyi/017.htm
+++ b/ebooks/history_yy/yuanshiyanyi/017.htm
@@ -171,7 +171,7 @@
 二年间事；第为便利阅者起见，不得不事从类叙。证诸正史，或年限稍有参差，亦不应指为
 疵累也。
 <p><hr>
-<center><A HREF="016.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="018.htm">下一回</A></center>
+<center><A HREF="016.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="018.htm">下一回</A></center>
 
 </body>
 </html>
