--- a/ebooks/history_yy/yuanshiyanyi/018.htm
+++ b/ebooks/history_yy/yuanshiyanyi/018.htm
@@ -170,7 +170,7 @@
 叙；而于烈妇之殉夫，猛将之死义，且裒辑遗闻，力为表彰，是足以补中西史乘之阙，不得
 以小说目之！
 <p><hr>
-<center><A HREF="017.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="019.htm">下一回</A></center>
+<center><A HREF="017.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="019.htm">下一回</A></center>
 
 </body>
 </html>
