--- a/ebooks/history_yy/yuanshiyanyi/019.htm
+++ b/ebooks/history_yy/yuanshiyanyi/019.htm
@@ -189,7 +189,7 @@
 释教，挈释子拔思巴北归，后且尊为帝师，酿成末世演揲之祸，贻谋不臧，卒致荒亡。观此
 回，可知祸为福伏，福为祸倚之渐，而世之为子孙谋者，应知所审慎矣！
 <p><hr>
-<center><A HREF="018.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="020.htm">下一回</A></center>
+<center><A HREF="018.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="020.htm">下一回</A></center>
 
 </body>
 </html>
