--- a/ebooks/history_yy/yuanshiyanyi/020.htm
+++ b/ebooks/history_yy/yuanshiyanyi/020.htm
@@ -183,7 +183,7 @@
 化野为文，入长中原，实于此基之。迭录原教，未始非保存国粹之意。主非汉人，而文则从
 汉，故宋亡而文不亡，用夏变夷，此之谓欤？
 <p><hr>
-<center><A HREF="019.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="021.htm">下一回</A></center>
+<center><A HREF="019.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="021.htm">下一回</A></center>
 
 </body>
 </html>
