--- a/ebooks/history_yy/yuanshiyanyi/021.htm
+++ b/ebooks/history_yy/yuanshiyanyi/021.htm
@@ -196,7 +196,7 @@
 史家之责，著书人夙存此志，不嫌烦复也。且观其全回用笔，一气赶下，“嘈嘈切切错杂
 弹，大珠小珠落玉盘”，此文似之。
 <p><hr>
-<center><A HREF="020.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="022.htm">下一回</A></center>
+<center><A HREF="020.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="022.htm">下一回</A></center>
 
 </body>
 </html>
