--- a/ebooks/history_yy/yuanshiyanyi/022.htm
+++ b/ebooks/history_yy/yuanshiyanyi/022.htm
@@ -157,7 +157,7 @@
 能读，且非尽人得读，获此一编，非举两弊而悉去之耶！此外杂以他事，有美有恶，虽循史
 家依事毕书之例，而盛衰之感，隐寓其中，不特简略之分已也。
 <p><hr>
-<center><A HREF="021.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="023.htm">下一回</A></center>
+<center><A HREF="021.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="023.htm">下一回</A></center>
 
 </body>
 </html>
