--- a/ebooks/history_yy/yuanshiyanyi/023.htm
+++ b/ebooks/history_yy/yuanshiyanyi/023.htm
@@ -171,7 +171,7 @@
 虽第述战事，而于篇首之“好大喜功”四字，已评定世祖人品。以下逐节写来，处处寓着讥
 刺，知寓戒之意深矣！
 <p><hr>
-<center><A HREF="022.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="024.htm">下一回</A></center>
+<center><A HREF="022.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="024.htm">下一回</A></center>
 
 </body>
 </html>
