--- a/ebooks/history_yy/yuanshiyanyi/027.htm
+++ b/ebooks/history_yy/yuanshiyanyi/027.htm
@@ -178,7 +178,7 @@
 兵，扰扰云、贵者有年，刘深之肉，其足食乎？本回于北方之战，归功床兀儿；南征之役，
 归罪刘深，而隐笔仍注意成宗，皮里阳秋，可与言史矣。
 <p><hr>
-<center><A HREF="026.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="028.htm">下一回</A></center>
+<center><A HREF="026.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="028.htm">下一回</A></center>
 
 </body>
 </html>
