--- a/ebooks/history_yy/yuanshiyanyi/028.htm
+++ b/ebooks/history_yy/yuanshiyanyi/028.htm
@@ -171,7 +171,7 @@
 生事，蔑祖制，蓄异谋，酿成巨衅，故天下不能无妇人，而断不能授权于妇人。妇祸之兴，
 人自启之耳，于妇人乎何诛？
 <p><hr>
-<center><A HREF="027.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="029.htm">下一回</A></center>
+<center><A HREF="027.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="029.htm">下一回</A></center>
 
 </body>
 </html>
