--- a/ebooks/history_yy/yuanshiyanyi/029.htm
+++ b/ebooks/history_yy/yuanshiyanyi/029.htm
@@ -177,7 +177,7 @@
 而来。书所谓位不期骄，禄不期侈者，匪特人臣有然，人主殆尤甚焉！故武宗非一昏庸主，
 而其后偏似昏庸，为君诚难矣哉！读史者当知所鉴矣。
 <p><hr>
-<center><A HREF="028.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="030.htm">下一回</A></center>
+<center><A HREF="028.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="030.htm">下一回</A></center>
 
 </body>
 </html>
