--- a/ebooks/history_yy/yuanshiyanyi/030.htm
+++ b/ebooks/history_yy/yuanshiyanyi/030.htm
@@ -167,7 +167,7 @@
 已之意，存于其间者。况科目亦曷尝不得人乎？即如今日之废科目，复选举，弊端百出，罄
 竹难书，是选举且不科目若也。元素贱儒，惟仁宗始注意及此，善善从长，故本回特备录之。
 <p><hr>
-<center><A HREF="029.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="031.htm">下一回</A></center>
+<center><A HREF="029.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="031.htm">下一回</A></center>
 
 </body>
 </html>
