--- a/ebooks/history_yy/yuanshiyanyi/031.htm
+++ b/ebooks/history_yy/yuanshiyanyi/031.htm
@@ -159,7 +159,7 @@
 者。然则仁宗之心，得毋谓妇人之仁耶！前回叙仁宗之善政，不忍没其长；此回叙仁宗之失
 德，不敢讳甚短，瑕不掩瑜，即此可见矣。
 <p><hr>
-<center><A HREF="030.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="032.htm">下一回</A></center>
+<center><A HREF="030.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="032.htm">下一回</A></center>
 
 </body>
 </html>
