--- a/ebooks/history_yy/yuanshiyanyi/032.htm
+++ b/ebooks/history_yy/yuanshiyanyi/032.htm
@@ -162,7 +162,7 @@
 戮忠良，英宗虽明，内迫于太后，外制于师傅，且因居丧尽礼，无暇顾及，是英宗之纵奸，
 情可曲原，而仁宗之贻谋不臧，未能诿咎可知也，读此回犹慨然于仁宗之失云。
 <p><hr>
-<center><A HREF="031.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="033.htm">下一回</A></center>
+<center><A HREF="031.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="033.htm">下一回</A></center>
 
 </body>
 </html>
