--- a/ebooks/history_yy/yuanshiyanyi/033.htm
+++ b/ebooks/history_yy/yuanshiyanyi/033.htm
@@ -167,7 +167,7 @@
 等，朋比为奸，至于宫廷谋变，几成大逆，微丞相拜住，不待南坡之弑，而英宗已饮刃矣。
 故本回为群奸立传，实不啻为太后立传，宫闱浊乱之弊，固有若是其甚者！
 <p><hr>
-<center><A HREF="032.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="034.htm">下一回</A></center>
+<center><A HREF="032.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="034.htm">下一回</A></center>
 
 </body>
 </html>
