--- a/ebooks/history_yy/yuanshiyanyi/034.htm
+++ b/ebooks/history_yy/yuanshiyanyi/034.htm
@@ -164,7 +164,7 @@
 不尽忠，然朝右奸党，未尽戮逐，死灰尚且复燃，能保奸党之不肆反噬乎？故本回为英宗君
 相合传，而褒中寓贬，自有微意，读者可于言外见之，毋徒视作断烂朝报也！
 <p><hr>
-<center><A HREF="033.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="035.htm">下一回</A></center>
+<center><A HREF="033.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="035.htm">下一回</A></center>
 
 </body>
 </html>
