--- a/ebooks/history_yy/yuanshiyanyi/035.htm
+++ b/ebooks/history_yy/yuanshiyanyi/035.htm
@@ -170,7 +170,7 @@
 无废书三叹乎！虽然，弑君之罪，尚可幸逃，强奸之罪，亦奚惮乎？大憝不诛，天下固无宁
 日也。
 <p><hr>
-<center><A HREF="034.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="036.htm">下一回</A></center>
+<center><A HREF="034.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="036.htm">下一回</A></center>
 
 </body>
 </html>
