--- a/ebooks/history_yy/yuanshiyanyi/036.htm
+++ b/ebooks/history_yy/yuanshiyanyi/036.htm
@@ -157,7 +157,7 @@
 政，安知不由倒剌沙辈，从中盅惑平？是回叙述，已将泰定帝之心迹，揭明纸上，史称其能
 守祖宪，号称治平，岂其然乎！
 <p><hr>
-<center><A HREF="035.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="037.htm">下一回</A></center>
+<center><A HREF="035.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="037.htm">下一回</A></center>
 
 </body>
 </html>
