--- a/ebooks/history_yy/yuanshiyanyi/038.htm
+++ b/ebooks/history_yy/yuanshiyanyi/038.htm
@@ -176,7 +176,7 @@
 后，即生内变，佛其果有灵耶？抑无灵耶？彼如燕帖木儿之图立怀王，抗拒上都，尤足以见
 佞佛之主，非徒无益，反且速祸，读史者当亦知所戒矣。
 <p><hr>
-<center><A HREF="037.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="039.htm">下一回</A></center>
+<center><A HREF="037.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="039.htm">下一回</A></center>
 
 </body>
 </html>
