--- a/ebooks/history_yy/yuanshiyanyi/039.htm
+++ b/ebooks/history_yy/yuanshiyanyi/039.htm
@@ -173,7 +173,7 @@
 师战胜之举，尤写得机变神智，非称美燕帖木儿，实隐诛燕帖木儿也。曹阿瞒以知兵闻，阿
 瞒得谓汉之忠臣否耶？吾于燕帖木儿亦云。
 <p><hr>
-<center><A HREF="038.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="040.htm">下一回</A></center>
+<center><A HREF="038.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="040.htm">下一回</A></center>
 
 </body>
 </html>
