--- a/ebooks/history_yy/yuanshiyanyi/040.htm
+++ b/ebooks/history_yy/yuanshiyanyi/040.htm
@@ -172,7 +172,7 @@
 上，吴道子之手笔，亦无以过之。且旋师入京时，卑以自牧，让美君王，处处似忠，实处处
 是诈；周公恐惧流言日，王恭谦恭下士时，读此益无限生感矣。
 <p><hr>
-<center><A HREF="039.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="041.htm">下一回</A></center>
+<center><A HREF="039.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="041.htm">下一回</A></center>
 
 </body>
 </html>
