--- a/ebooks/history_yy/yuanshiyanyi/041.htm
+++ b/ebooks/history_yy/yuanshiyanyi/041.htm
@@ -154,7 +154,7 @@
 望其竭诚保护，不作他想乎？是回叙移置后妃事，已将燕帖木儿心迹，隐约表明，匣剑帷灯
 之妙，可即于本回中见之。迨阅至后文，图穷匕见，更知伏笔之不虚设矣。
 <p><hr>
-<center><A HREF="040.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="042.htm">下一回</A></center>
+<center><A HREF="040.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="042.htm">下一回</A></center>
 
 </body>
 </html>
