--- a/ebooks/history_yy/yuanshiyanyi/042.htm
+++ b/ebooks/history_yy/yuanshiyanyi/042.htm
@@ -149,7 +149,7 @@
 所谓让兄者，特其矫情耳。燕帖木儿知之最深，故受赐最厚。周王和世，未曾入京，遽正
 大位，曾不知他人已耽耽其旁，欲以之为尝试地，而在己且愿供玩弄而不之悟也。哀哉！
 <p><hr>
-<center><A HREF="041.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="043.htm">下一回</A></center>
+<center><A HREF="041.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="043.htm">下一回</A></center>
 
 </body>
 </html>
