--- a/ebooks/history_yy/yuanshiyanyi/044.htm
+++ b/ebooks/history_yy/yuanshiyanyi/044.htm
@@ -161,7 +161,7 @@
 乎？揆情度理，必由明宗帝后，暗中为祟，有以慑其魄而褫其神耳。从无生有，即似寓真，
 是谓之善演史。
 <p><hr>
-<center><A HREF="043.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="045.htm">下一回</A></center>
+<center><A HREF="043.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="045.htm">下一回</A></center>
 
 </body>
 </html>
