--- a/ebooks/history_yy/yuanshiyanyi/046.htm
+++ b/ebooks/history_yy/yuanshiyanyi/046.htm
@@ -162,7 +162,7 @@
 鲠之士，秉直纠弹，元其能不亡乎？故此回叙燕帖木儿事实，嫉其强暴，叙泰定后妃事实，
 恶其淫邪，幸勿视为香奁琐语也！
 <p><hr>
-<center><A HREF="045.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="047.htm">下一回</A></center>
+<center><A HREF="045.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="047.htm">下一回</A></center>
 
 </body>
 </html>
