--- a/ebooks/history_yy/yuanshiyanyi/048.htm
+++ b/ebooks/history_yy/yuanshiyanyi/048.htm
@@ -145,7 +145,7 @@
 殆天之福善祸淫，而阴夺其魄者？本书历叙权奸，而于燕帖木儿之生死，记载独详，其所以
 庽戒之意，昭然若揭，余事已见细评，要无非一儆世也。
 <p><hr>
-<center><A HREF="047.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="049.htm">下一回</A></center>
+<center><A HREF="047.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="049.htm">下一回</A></center>
 
 </body>
 </html>
