--- a/ebooks/history_yy/yuanshiyanyi/049.htm
+++ b/ebooks/history_yy/yuanshiyanyi/049.htm
@@ -167,7 +167,7 @@
 有伯颜，未鉴前车，复循覆辙，胁主捽后，任所欲为，是殆愚之又愚者。传曰：其兴也暴，
 其亡也忽。观于此文益信！
 <p><hr>
-<center><A HREF="048.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="050.htm">下一回</A></center>
+<center><A HREF="048.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="050.htm">下一回</A></center>
 
 </body>
 </html>
