--- a/ebooks/history_yy/yuanshiyanyi/051.htm
+++ b/ebooks/history_yy/yuanshiyanyi/051.htm
@@ -180,7 +180,7 @@
 下，其实不过一叙事文而已。然读《元史》至伯颜、马扎尔台、脱脱诸传，不如读此一回文
 字，较有兴味，是非用笔之长，曷克臻此，阅者宁得徒以小说目之！
 <p><hr>
-<center><A HREF="050.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="052.htm">下一回</A></center>
+<center><A HREF="050.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="052.htm">下一回</A></center>
 
 </body>
 </html>
