--- a/ebooks/history_yy/yuanshiyanyi/052.htm
+++ b/ebooks/history_yy/yuanshiyanyi/052.htm
@@ -156,7 +156,7 @@
 相，召儒臣，勉阿鲁图之交儆，惜巙巙之遽殁，亦若有一隙之明。乃天日方开，阴霾复集，
 可见小善之足陈，卒无补于大体，特揭录之以垂炯戒，俾后世知一节之长，殊不足道云。
 <p><hr>
-<center><A HREF="051.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="053.htm">下一回</A></center>
+<center><A HREF="051.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="053.htm">下一回</A></center>
 
 </body>
 </html>
