--- a/ebooks/history_yy/yuanshiyanyi/053.htm
+++ b/ebooks/history_yy/yuanshiyanyi/053.htm
@@ -160,7 +160,7 @@
 安能遽论嫡庶乎？故本回所叙，实以脱脱为主，余人皆宾也，借宾定主，而他事皆借此销
 纳。尤见其天衣无缝云。
 <p><hr>
-<center><A HREF="052.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="054.htm">下一回</A></center>
+<center><A HREF="052.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="054.htm">下一回</A></center>
 
 </body>
 </html>
