--- a/ebooks/history_yy/yuanshiyanyi/054.htm
+++ b/ebooks/history_yy/yuanshiyanyi/054.htm
@@ -160,7 +160,7 @@
 惑耶？本回叙治河事，词不厌详，而下语多有分寸，至于群盗之起，仅列表以明之，盖前应
 化简为繁，后应删繁就简，作者之着意在此，阅者之醒目亦在此，毋视为寻常铺叙也！
 <p><hr>
-<center><A HREF="053.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="055.htm">下一回</A></center>
+<center><A HREF="053.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="055.htm">下一回</A></center>
 
 </body>
 </html>
