--- a/ebooks/history_yy/yuanshiyanyi/055.htm
+++ b/ebooks/history_yy/yuanshiyanyi/055.htm
@@ -161,7 +161,7 @@
 书人颇重视脱脱，故虽不掩脱脱之短，而独喜述脱脱之长。意者其亦善善从长之意乎？然元
 代贤相，绝无仅有，如脱脱者，固不容尽没甚功也。
 <p><hr>
-<center><A HREF="054.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="056.htm">下一回</A></center>
+<center><A HREF="054.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="056.htm">下一回</A></center>
 
 </body>
 </html>
