--- a/ebooks/history_yy/yuanshiyanyi/056.htm
+++ b/ebooks/history_yy/yuanshiyanyi/056.htm
@@ -164,7 +164,7 @@
 事，已觉渲染生妍，至插入脱脱进谏一段，尤足补史之阙。揆情度理，应有此文，不得以虚
 伪少之。
 <p><hr>
-<center><A HREF="055.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="057.htm">下一回</A></center>
+<center><A HREF="055.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="057.htm">下一回</A></center>
 
 </body>
 </html>
