--- a/ebooks/history_yy/yuanshiyanyi/057.htm
+++ b/ebooks/history_yy/yuanshiyanyi/057.htm
@@ -162,7 +162,7 @@
 之异，且兄弟同日战死，尤为难得，故叙述亦较他人为详，可见下笔时具有斟酌，非率尔操
 觚者比也。
 <p><hr>
-<center><A HREF="056.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="058.htm">下一回</A></center>
+<center><A HREF="056.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="058.htm">下一回</A></center>
 
 </body>
 </html>
