--- a/ebooks/history_yy/yuanshiyanyi/058.htm
+++ b/ebooks/history_yy/yuanshiyanyi/058.htm
@@ -165,7 +165,7 @@
 儿之死，似属可悲；徐寿辉之死，殊不足惜。观此回之用笔，不特一详一略，隐寓机缄，而
 一可悲一不足惜之意，亦流露于楮墨间。文生情耶！情生文耶！即文见情，是在阅者。
 <p><hr>
-<center><A HREF="057.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="059.htm">下一回</A></center>
+<center><A HREF="057.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="059.htm">下一回</A></center>
 
 </body>
 </html>
