--- a/ebooks/history_yy/yuanshiyanyi/059.htm
+++ b/ebooks/history_yy/yuanshiyanyi/059.htm
@@ -172,7 +172,7 @@
 禅，于是朴不花、搠思监，表里为奸，乘间希宠；于是孛罗、扩廓，先后入犯，借口诛奸。
 倘非顺帝之素耽女宠，何自致此奇祸耶？哲妇倾城，我亦云然！
 <p><hr>
-<center><A HREF="058.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="060.htm">下一回</A></center>
+<center><A HREF="058.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="060.htm">下一回</A></center>
 
 </body>
 </html>
