--- a/ebooks/history_yy/yuanshiyanyi/060.htm
+++ b/ebooks/history_yy/yuanshiyanyi/060.htm
@@ -168,7 +168,7 @@
 次说明。至若帖木儿之奄有西域，亦在元亡后数十年间，必欲于此详述，试问元、明两代，
 将从何处分界耶？故宜详者不厌其烦，宜简者不嫌其略，著书人固自有深意也。
 <p><hr>
-<center><A HREF="059.htm">前一回</a>　　<a href="_content.html">回目录</a></center>
+<center><A HREF="059.htm">前一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 </html>
