--- a/ebooks/history_yy/yuanshiyanyi/007.htm
+++ b/ebooks/history_yy/yuanshiyanyi/007.htm
@@ -158,7 +158,7 @@
 目。小说亦然，然或词笔复沓，连篇一律，则味同嚼蜡，亦乏趣味，作者于帖木真得三美
 时，词意迭变，为个人各占身分，即为本书焕出精神，是即文字夺色处。
 <p><hr>
-<center><A HREF="006.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="008.htm">下一回</A></center>
+<center><A HREF="006.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="008.htm">下一回</A></center>
 
 </body>
 </html>
