--- a/ebooks/history_yy/yuanshiyanyi/012.htm
+++ b/ebooks/history_yy/yuanshiyanyi/012.htm
@@ -165,7 +165,7 @@
 渐，信乎以马上得天下者，不能以马上治也。本文依事直叙，文似拉杂，而暗中恰隐寓线
 索，阅者可于夹缝中求之！
 <p><hr>
-<center><A HREF="011.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="013.htm">下一回</A></center>
+<center><A HREF="011.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="013.htm">下一回</A></center>
 
 </body>
 </html>
