--- a/ebooks/history_yy/yuanshiyanyi/014.htm
+++ b/ebooks/history_yy/yuanshiyanyi/014.htm
@@ -168,7 +168,7 @@
 矣！下半回叙哲、速二将征钦察事，亦考据备详，不稍夸诞，而演笔则又奇正相生。作者兼
 历史家小说家之长，故化板为活，不落恒蹊。
 <p><hr>
-<center><A HREF="013.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="015.htm">下一回</A></center>
+<center><A HREF="013.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="015.htm">下一回</A></center>
 
 </body>
 </html>
