--- a/ebooks/history_yy/yuanshiyanyi/024.htm
+++ b/ebooks/history_yy/yuanshiyanyi/024.htm
@@ -173,7 +173,7 @@
 武，暴敛横征，外患未靖，而内乱迭作，谁为为之，以至于此！幸其时犹称全盛，不致遽
 亡；然履霜坚冰，其象已见，读此回应为之黯然！
 <p><hr>
-<center><A HREF="023.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="025.htm">下一回</A></center>
+<center><A HREF="023.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="025.htm">下一回</A></center>
 
 </body>
 </html>
