--- a/ebooks/history_yy/yuanshiyanyi/025.htm
+++ b/ebooks/history_yy/yuanshiyanyi/025.htm
@@ -178,7 +178,7 @@
 因、杨恭懿之屡征不至，固有特识，非第华彝之防己也。阅者于夹缝中求之，庶识著书人深
 意。
 <p><hr>
-<center><A HREF="024.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="026.htm">下一回</A></center>
+<center><A HREF="024.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="026.htm">下一回</A></center>
 
 </body>
 </html>
