--- a/ebooks/history_yy/yuanshiyanyi/026.htm
+++ b/ebooks/history_yy/yuanshiyanyi/026.htm
@@ -174,7 +174,7 @@
 <p>
 　　惩前毖后，请鉴是书！
 <p><hr>
-<center><A HREF="025.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="027.htm">下一回</A></center>
+<center><A HREF="025.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="027.htm">下一回</A></center>
 
 </body>
 </html>
