--- a/ebooks/history_yy/yuanshiyanyi/037.htm
+++ b/ebooks/history_yy/yuanshiyanyi/037.htm
@@ -193,7 +193,7 @@
 一代嗣君，反成国位，是不得谓非咎由自取也！张珪屡谏不从，即托病乞归。古人云，以道
 事君，不可则止，吾于珪殆遇之焉。
 <p><hr>
-<center><A HREF="036.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="038.htm">下一回</A></center>
+<center><A HREF="036.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="038.htm">下一回</A></center>
 
 </body>
 </html>
