--- a/ebooks/history_yy/yuanshiyanyi/043.htm
+++ b/ebooks/history_yy/yuanshiyanyi/043.htm
@@ -164,7 +164,7 @@
 未曾登极，即易旧臣，机一至而即发，情欲盖而弥张。至于内省多疚，欲假佛事以忏过，佛
 果有灵，岂为乱贼呵护平？获罪于天，祷亦何益，多见其不知量也。
 <p><hr>
-<center><A HREF="042.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="044.htm">下一回</A></center>
+<center><A HREF="042.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="044.htm">下一回</A></center>
 
 </body>
 </html>
