--- a/ebooks/history_yy/yuanshiyanyi/045.htm
+++ b/ebooks/history_yy/yuanshiyanyi/045.htm
@@ -158,7 +158,7 @@
 而出此，著书人从明眼窥出，既足以补史阙，复足以儆世人。是固有心人吐属，非好谈鬼怪
 也。
 <p><hr>
-<center><A HREF="044.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="046.htm">下一回</A></center>
+<center><A HREF="044.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="046.htm">下一回</A></center>
 
 </body>
 </html>
