--- a/ebooks/history_yy/yuanshiyanyi/047.htm
+++ b/ebooks/history_yy/yuanshiyanyi/047.htm
@@ -144,7 +144,7 @@
 后，讵转能爱明宗子乎？是必由明宗帝后，从中示儆可知也，证以四十五回，前后联贯，阅
 者应益恍然。
 <p><hr>
-<center><A HREF="046.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="048.htm">下一回</A></center>
+<center><A HREF="046.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="048.htm">下一回</A></center>
 
 </body>
 </html>
