--- a/ebooks/history_yy/yuanshiyanyi/050.htm
+++ b/ebooks/history_yy/yuanshiyanyi/050.htm
@@ -164,7 +164,7 @@
 邀主眷，权奸之所为，固如是哉！此回叙元廷政事，除罢免科举外，似与伯颜无涉，实则暗
 中皆指斥伯颜。项庄舞剑，意在沛公，阅者体会入微，自能知之。
 <p><hr>
-<center><A HREF="049.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="051.htm">下一回</A></center>
+<center><A HREF="049.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="051.htm">下一回</A></center>
 
 </body>
 </html>
