--- a/ebooks/history_yy/wudaiyanyi/60.htm
+++ b/ebooks/history_yy/wudaiyanyi/60.htm
@@ -212,7 +212,7 @@
 <p>
 <hr>
 
-<center><a href="_content.html">回目录</a></center>
+<center><a href="content.html">回目录</a></center>
 
 </body>
 <html>
