--- a/ebooks/history_yy/wudaiyanyi/06.htm
+++ b/ebooks/history_yy/wudaiyanyi/06.htm
@@ -182,7 +182,7 @@
 　　<p>
 <hr>
 
-<center><a href="07.htm">下一回</a>　　<a href="_content.html">回目录</a></center>
+<center><a href="07.htm">下一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 <html>
