--- a/ebooks/history_yy/wudaiyanyi/22.htm
+++ b/ebooks/history_yy/wudaiyanyi/22.htm
@@ -212,7 +212,7 @@
 <p>
 <hr>
 
-<center><a href="23.htm">下一回</a>　　<a href="_content.html">回目录</a></center>
+<center><a href="23.htm">下一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 <html>
