--- a/ebooks/history_yy/wudaiyanyi/28.htm
+++ b/ebooks/history_yy/wudaiyanyi/28.htm
@@ -217,7 +217,7 @@
 <p>
 <hr>
 
-<center><a href="29.htm">下一回</a>　　<a href="_content.html">回目录</a></center>
+<center><a href="29.htm">下一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 <html>
