--- a/ebooks/history_yy/wudaiyanyi/35.htm
+++ b/ebooks/history_yy/wudaiyanyi/35.htm
@@ -195,7 +195,7 @@
 <p>
 <hr>
 
-<center><a href="36.htm">下一回</a>　　<a href="_content.html">回目录</a></center>
+<center><a href="36.htm">下一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 <html>
