--- a/ebooks/history_yy/wudaiyanyi/38.htm
+++ b/ebooks/history_yy/wudaiyanyi/38.htm
@@ -197,7 +197,7 @@
 <p>
 <hr>
 
-<center><a href="39.htm">下一回</a>　　<a href="_content.html">回目录</a></center>
+<center><a href="39.htm">下一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 <html>
