--- a/ebooks/history_yy/wudaiyanyi/42.htm
+++ b/ebooks/history_yy/wudaiyanyi/42.htm
@@ -193,7 +193,7 @@
 <p>
 <hr>
 
-<center><a href="43.htm">下一回</a>　　<a href="_content.html">回目录</a></center>
+<center><a href="43.htm">下一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 <html>
