--- a/ebooks/history_yy/wudaiyanyi/57.htm
+++ b/ebooks/history_yy/wudaiyanyi/57.htm
@@ -173,7 +173,7 @@
 <p>
 <hr>
 
-<center><a href="58.htm">下一回</a>　　<a href="_content.html">回目录</a></center>
+<center><a href="58.htm">下一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 <html>
